--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VUE_APP_PROJECT = "https://github.com/CareyWang/sub-web"
+VUE_APP_PROJECT = "https://github.com/gradendripar/sub-web"
 
-VUE_APP_BOT_LINK = "https://t.me/CareyWong_bot"
+VUE_APP_BOT_LINK = "https://t.me/TooziyaBot"
 
 VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 
@@ -10,7 +10,7 @@ VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy201
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://api.wcc.best"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://3c.cm"
 
 # 文本托管后端
 VUE_APP_CONFIG_UPLOAD_BACKEND = "https://api.wcc.best"
